Update index.html for cornblog GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,1 +1,113 @@
-<h1>Hello!</h1>
+<h1>Friday Night Funkin' Horrorland Lyrics i guess
+  
+Your skin is freezing,
+
+here let me help you take it off.
+
+[Chipmunk noises]
+  
+Feasting with your friends,
+
+what a perfect way to end,
+
+all these lonely holidays.
+
+(la la la la)
+
+[chipmunk noises]
+  
+Gonna take a piece of your rabies,
+
+and vivisect your mind.
+  
+[chipmunk.mp3]
+
+Snowman smiling with your teeth,
+  
+[chipmunk sound effect #2]
+
+fallen angels created with your meat.
+
+[guess what it is?]
+  
+(That pearly smile.)
+  
+[more fucking chipmunk noises]
+
+Cut, in a thousand slices.
+
+Bake you 'til, golden brown.
+  
+[yup, more chipmunk noises]
+
+Stuff you with spices.
+
+[chipmunk]
+  
+Serve to friends around.
+
+Separate, you from your eyes.
+
+Turn your girlfriend inside out,
+
+and burn her fingernails.
+
+(la la la la)
+  
+[chipmonk]
+
+Soak your hands in freezing water.
+  
+[la ardilla]
+
+Watching as the skin gets softer.
+  
+[le tamia]
+
+See your bones appear in
+
+dark red snow.
+
+Drop further below.
+
+Gonna take a piece of your rabies,
+
+and vivisect your mind.
+  
+[champonk]
+
+Gonna take a peek inside your head,
+  
+[cimunk]
+
+and find the worm inside.
+
+[i think it's chipmunk]
+  
+Cut, in a thousand slices.
+
+Bake you 'til, golden brown.
+  
+[chimunk]
+
+Fill you with spices.
+
+[chumpink]
+  
+Serve to friends around.
+  
+Turn the heat on high and
+
+we'll reduce your blood,
+  
+[chumpkink]
+
+boil 'lil boyfriend,
+  
+[more chinump noises]
+
+with brandy and plums.
+
+[final chimunk sounds]
+  
+</h1>
