Create index,html for lyrics GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<h1>Friday Night Funkin' Horrorland Lyrics i guess
-  
-Your skin is freezing,
+<h1>Your skin is freezing,
 
 here let me help you take it off.
 
